--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 Flask==3.0.3
 gunicorn==21.2.0
-transformers==4.43.0
-accelerate==0.32.1
-torch
-numpy==2.2.6
-diskcache==5.6.3
+google-generativeai==0.5.4
+python-dotenv
 jinja2==3.1.6
